add_executable(item7 item7.cpp)
add_executable(item8 item8.cpp)
add_executable(item9 item9.cpp)
add_executable(item10 item10.cpp)
add_executable(item11 item11.cpp)
add_executable(item12 item12.cpp)
add_executable(item15 item15.cpp)
add_executable(item17 item17.cpp)
add_executable(item14 item14.cpp)
add_executable(item13 item13.cpp)

add_executable(base10 base10.cpp)
add_executable(base11 base11.cpp)
add_executable(base11_2 base11_2.cpp)
add_executable(base12 base12.cpp)