add_executable(base17 base17.cpp)
add_executable(base18 base18.cpp)
add_executable(base19 base19.cpp)
add_executable(item23 item23.cpp)
add_executable(item24 item24.cpp)
add_executable(item25 item25.cpp)
add_executable(item26 item26.cpp)
add_executable(item27 item27.cpp)
add_executable(item28 item28.cpp)
